refactored adding admins to retain search results after you add an admin, added a button for adding admins to make the action clear, and updated styling